pタグを移動

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 <body>
 	<div id="app"></div>
-	<p>Hello World!</p>
 
 	<script src="src/index.js">
 	</script>
+	<p>pタグを移動</p>
 </body>
 
 </html>
